# vst_sampler_juce_2026

./: .copilot-instructions.md  .gitignore  CMakeLists.txt  NOTES_FOR_SELF.md  README.md  TODO.md  backup.ps1
copilot_context/: CONVERSATION_SUMMARY.md  SESSION_NOTES.md
docs/: JUCE_UI_DIRECTIONS.md  PORTING.md  TEENSY_PERFORMANCE.md  TEENSY_UI_DIRECTIONS.md
src/audio/: AudioFileLoader.cpp  AudioFileLoader.h  PresetManager.cpp  PresetManager.h
src/dsp/: AudioBuffer.cpp  AudioBuffer.h  CircularBuffer.cpp  CircularBuffer.h  FreezeEffect.cpp  FreezeEffect.h  Mixer.cpp  Mixer.h  Sampler.cpp  Sampler.h  SamplerBank.cpp  SamplerBank.h  TeensyMenu.cpp  TeensyMenu.h
src/dsp/effects/: BitCrush.h  Distortion.h  Effect.h  EffectLibrary.h  NoEffect.h  SimpleFilter.h
src/hardware/teensy/: PLACEHOLDER.md
src/juce/: FreezeBufferDisplay.cpp  FreezeBufferDisplay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleTabPanel.cpp  SampleTabPanel.h  TeensyEmulationPanel.cpp  TeensyEmulationPanel.h  WaveformDisplay.cpp  WaveformDisplay.h
unit_tests/: CMakeLists.txt  main.cpp  test_AudioBuffer.cpp  test_CircularBuffer.cpp  test_FreezeEffect.cpp  test_Integration.cpp  test_Mixer.cpp  test_Sampler.cpp  test_SamplerBank.cpp  test_TeensyMenu.cpp
